# lite-boolean-formulae

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
lite_boolean_formulae/: __init__.py  boolean_objects.py  checks.py  constants.py  shortcuts.py  utils.py
lite_boolean_formulae/utils/: immutable_class.py  pp.py  str_compat.py
lite_cnf_formulae/: __init__.py  base.py  cnf.py  cnf_objects.py  constants.py  constructors.py  internal_util.py  shortcuts.py  util.py
lite_cnf_formulae/utils/: immutable_class.py  pp.py
scripts/: activate  common.sh  make_venv.sh  safe_bin.sh
src/lite_boolean_formulae/: boolean_objects.py  shortcuts.py  utils.py
tests/: test_bad_connectors.py  test_boolean_formula_objs.py  test_cnf.py  test_contains.py  test_equivalence.py  test_get_literals.py  test_hash.py  test_shortcuts.py  test_substitue.py  test_utils_immutable_class.py  test_utils_pp.py  utils.py
